fix easy_to_switch (column flex) on IE11

--- a/app/assets/stylesheets/carousel.sass
+++ b/app/assets/stylesheets/carousel.sass
@@ -78,11 +78,17 @@ $carousel-item-width-mobile: 240px
     padding-bottom: 0px
     h3
       font-size: 28px
+      @media (min-width: 2000px)
+        font-size: 32px
     p
       padding: 20px
       font-size: 16px
+      @media (min-width: 2000px)
+        font-size: 20px
     .more
       font-size: 18px
+      @media (min-width: 2000px)
+        font-size: 22px
 
 a.carousel-control
   background-position: center center
